# MQClient

./: .gitignore  CHANGELOG.md  Dockerfile  Dockerfile_two  README.md  dev-requirements.txt  pyproject.toml  requirements-all.txt  requirements-dev.txt  requirements-gcp.txt  requirements-integration.txt  requirements-nats.txt  requirements-pulsar.txt  requirements-rabbitmq.txt  requirements-telemetry.txt  requirements.txt  setup.cfg  setup.py  setupenv.sh  tox.ini
.circleci/: config.yml
.github/workflows/: add-to-project.yml  codeql.yml  wipac-cicd.yml
MQClient/: __init__.py  backend_interface.py  queue.py
MQClient/backends/: __init__.py  apachepulsar.py  gcp.py  log_msgs.py  logging_strings.py  pulsar.py  rabbitmq.py
examples/: script.sh  server.py  worker.py
examples/gcp/: publisher.py  run-using-emulator.sh  subscriber.py
integration-tests/: common_tests.py  test_pulsar.py  test_rabbitmq.py
integration_tests/: common_backend_interface_tests.py  common_queue_tests.py  common_tests.py  test_apachepulsar.py  test_pulsar.py  test_rabbitmq.py  utils.py
mqclient/: __init__.py  backend_interface.py  backend_manager.py  broker_client_interface.py  broker_client_manager.py  config.py  queue.py  requirements.txt  telemetry.py
resources/: docker-pulsar.sh  docker-rabbitmq.sh  gcp-emulator.sh  gcp.sh  keycloak_bootstrap.py  local-gcp-emulator.sh  local-nats-js.sh  message_compression_benchmarking.py  message_compression_benchmarking.sh  pulsar.sh  rabbitmq-custom.conf  rabbitmq.conf  rabbitmq.sh
tests/: test_backend_interface.py  test_init.py  test_queue.py
(+59 files in other folders)
